<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Spinner
                    android:id="@+id/spn_mes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/mes" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jornada"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edt_obrigatorias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:enabled="false"
                android:inputType="number" >
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horas_trabalhadas"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edt_feitas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:enabled="false"
                android:inputType="number" >
            </EditText>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textAppearance="?android:attr/textAppearanceLarge" >
            </TextView>

            <EditText
                android:id="@+id/edt_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:enabled="false"
                android:inputType="number" >
            </EditText>
        </LinearLayout>
    </ScrollView>

</LinearLayout>